k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-signup
  labels:
    app: login-signup
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    app: login-signup
