k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: login.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-signup
            port:
              number: 3000
  - host: signup.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-signup
            port:
              number: 3000
